// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpCard tests should render the card component 1`] = `
<DocumentFragment>
  <section
    class="card"
    data-testid="help-card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2
          class="small"
          data-testid="help-title"
        >
          <a
            href="/help/help-page"
          >
            What is the canonical sequence? Are all isoforms described in one entry?
          </a>
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span
          class="emphasized"
        >
          unreleased
        </span>
        <br />
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`HelpCard tests should render the card component and find highlights 1`] = `
<DocumentFragment>
  <section
    class="card"
    data-testid="help-card"
  >
    <div
      class="card__container"
    >
      <div
        class="card__header"
      >
        <h2
          class="small"
          data-testid="help-title"
        >
          <a
            href="/help/help-page"
          >
            <span>
              What is the 
              <span
                class="match-highlight"
              >
                canonical
              </span>
               sequence? Are all isoforms described in one entry?
            </span>
          </a>
        </h2>
      </div>
      <div
        class="card__content"
      >
        <span
          class="emphasized"
        >
          unreleased
        </span>
        <br />
        <span>
          What is the 
          <span
            class="match-highlight"
          >
            canonical
          </span>
           sequence? Each UniProtKB/Swiss-Prot entry contains all curated protein
        </span>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
